--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
     "rn-apple-healthkit": "^0.6.4"
   },
   "devDependencies": {
